[package]
name = "nodencer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0" # Added for body manipulation
clap = { version = "4.0", features = ["derive"] }
dashmap = "7.0.0-rc2" # For concurrent HashMap (sticky IP)
eyre = "0.6.12"
http-body-util = "0.1.1" # Added for Hyper 1.x body utilities
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0" # For HTTPS client
hyper-util = { version = "0.1.13", features = ["client-legacy", "server-auto"] } # Added for Hyper 1.x utilities
rand = { version = "0.9", features = ["thread_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
